@@ -107,6 +107,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - FormulaOne             Juro Bystricky
 - Fortran                Cedric Arrabie
 - FreeBasic              Roberto Rossi
+- FreeSWITCH             James Rose
 - GADV 4CS               Jason Curl
 - GAMBAS                 Jesus Guardon
 - Genie                  Nicolas Joseph
