@@ -18,6 +18,7 @@ Version 1.0.8.11
      * Asymptote (Manuel Yguel)
      * DCL (Petr Hendl)
      * DCPU-16 (Benny Baumann)
+     * FreeSWITCH (James Rose)
      * LDIF (Bruno Harbulot)
      * Nagios (Albéric de Pertat)
      * Octave (Carnë Draug, Juan Pablo Carbajal)
